--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><b>C</b>oding Valley</a>
+        <a class="navbar-brand" href="/Coding-Valley"><b>C</b>oding Valley</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,15 +31,15 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home.html"
+              <a class="nav-link active" aria-current="page" href="/Coding-Valley/home.html"
                 >Home</a
               >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/Coding-Valley/about.html">About</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -62,7 +62,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/Coding-Valley/contact.html">Contact Us</a>
             </li>
           </ul>
 
