--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/Coding-Valley"><b>C</b>oding Valley</a>
+        <a class="navbar-brand" href="/Coding-Valley/home"><b>C</b>oding Valley</a>
         <button
           class="navbar-toggler"
           type="button"
