--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Coding Valley</title>
+    <title>Coding-Valley</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
