--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Codind Valley</title>
+    <title>Codind-Valley</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
